objects/vlocity_cmt__EntityFilterCondition__c.object
<CustomObject>
    <description>A Vlocity Entity Filter Condition defines a condition which must be true in order for a record to be retained in the result set.</description>
    <fields>
        <fullName>vlocity_cmt__EntityFilterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity Filter</label>
        <referenceTo>vlocity_cmt__EntityFilter__c</referenceTo>
        <relationshipLabel>Entity Filter Conditions</relationshipLabel>
        <relationshipName>EntityFilterConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FieldType__c</fullName>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Index__c</fullName>
        <label>Index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attribute</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Filter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValueLabel__c</fullName>
        <label>Value Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Entity Filter Condition</label>
    <nameField>
        <displayFormat>EFC-{00000}</displayFormat>
        <label>Entity Filter Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Filter Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>